# mopidy-pibox

./: .eslintrc.json  .gitignore  DEPENDENCIES.md  MANIFEST.in  README.md  README.rst  bump_version.sh  eslint.config.mjs  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini  vite.config.js
.circleci/: config.yml
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
mopidy_pibox/: __init__.py  api.py  ext.conf  frontend.py  pibox.py  routing.py  socket.py
mopidy_pibox/.metadata/: version.ini
mopidy_pibox/.metadata/.mylyn/.taskListIndex/: segments_1
mopidy_pibox/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
mopidy_pibox/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
mopidy_pibox/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
mopidy_pibox/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache/: segments_1
mopidy_pibox/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history/: segments_1
mopidy_pibox/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/remote-history/: segments_1
mopidy_pibox/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
mopidy_pibox/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
mopidy_pibox/pibox_api/: api.py  session.py  socket.py
mopidy_pibox/pibox_web/: actors.html  history.html  invalid.html  playlists.html  search.html  session.py  test.html  tracks.html  web.py
mopidy_pibox/pibox_web/style/: invalid.css  search.css  tracks.css
mopidy_pibox/public/: index.html  service-worker.js
mopidy_pibox/public/static/css/: main.50447418.css.map
mopidy_pibox/static/: asset-manifest.json  index.html  manifest.json  precache-manifest.3d49db55dd089d406f9c86072721fb20.js  precache-manifest.5da645f675acdba7b57bae0fe0a03d4b.js  precache-manifest.ccd4e6943c1e49f1a244ba2613201bfc.js  precache-manifest.e04de1527daaa323a56b828ffcc2ac6d.js  service-worker.js
mopidy_pibox/static/css/: main.50447418.css
mopidy_pibox/static/js/: main.8f1199aa.js  main.8f1199aa.js.map
mopidy_pibox/static/static/css/: main.0ead4965.css  main.0ead4965.css.map  main.2579be90.css  main.2579be90.css.map  main.2d6ee6f7.css  main.2d6ee6f7.css.map  main.4eb23790.css  main.4eb23790.css.map  main.4fbb4e6d.css  main.4fbb4e6d.css.map  main.56c39bfa.css  main.56c39bfa.css.map  main.5af6eae3.css  main.5af6eae3.css.map  main.6eae9811.chunk.css  main.6eae9811.chunk.css.map  main.76efd0a3.css  main.76efd0a3.css.map  main.7f551ba7.css  main.7f551ba7.css.map  main.921e4393.css  main.921e4393.css.map  main.953bdcc3.css  main.953bdcc3.css.map  main.9bcae08f.css  main.9bcae08f.css.map  main.af857016.css  main.af857016.css.map  main.bb1975bb.css  main.bb1975bb.css.map  main.ce8bce05.css  main.ce8bce05.css.map  main.e1f2b59a.css  main.e1f2b59a.css.map  main.f123936f.css  main.f123936f.css.map  main.f2b36e30.css  main.f2b36e30.css.map  main.f72583d5.css  main.f72583d5.css.map
mopidy_pibox/static/static/js/: 2.5c0abb94.chunk.js  2.5c0abb94.chunk.js.map  2.704d0bbc.chunk.js  2.704d0bbc.chunk.js.LICENSE.txt  2.704d0bbc.chunk.js.map  main.006cb720.js  main.006cb720.js.map  main.03341114.js  main.03341114.js.map  main.06e33060.js  main.06e33060.js.map  main.0b5f9097.js  main.0b5f9097.js.map  main.0c38bce7.js  main.0c38bce7.js.map  main.10a325ad.js  main.10a325ad.js.map  main.10d07906.js  main.10d07906.js.map  main.1365437f.js  main.1365437f.js.map  main.13a6deb9.js  main.13a6deb9.js.map  main.15b8d5d3.js  main.15b8d5d3.js.map  main.1707c635.js  main.1707c635.js.map  main.172c3c31.js  main.172c3c31.js.map  main.1aa4b668.js  main.1aa4b668.js.map  main.1c08cb1f.js  main.1c08cb1f.js.map  main.1c88ba38.js  main.1c88ba38.js.map  main.1cb171d5.js  main.1cb171d5.js.map  main.20b349dd.js  main.20b349dd.js.map  main.29e5c10c.js  (+213 more)
pibox/: package-lock.json  package.json
pibox/src/: App.js
pibox/src/components/: ArtistSentence.jsx  Home.jsx  PlaybackControls.jsx  Search.jsx  SearchBox.jsx  SearchResultItem.jsx  Thumbnail.jsx  Tracklist.jsx
public/: index.html  manifest.json
src/: App.js  MopidyRoot.jsx  Root.jsx  configure-store.js  index.css  index.js  index.jsx
src/components/: ArtistSentence.jsx  Home.jsx  NavigationBar.jsx  NothingPlaying.jsx  NowPlaying.jsx  PlaybackControls.jsx  Search.jsx  SearchBox.jsx  SearchOverlay.jsx  SearchResultItem.jsx  SessionForm.jsx  Thumbnail.jsx  Tracklist.jsx  TracklistItem.jsx
src/components/common/: ArtistSentence.jsx  LoadingScreen.jsx  Thumbnail.jsx
src/components/playback/: NothingPlaying.jsx  NowPlaying.jsx  PlaybackControls.jsx
src/components/search/: Search.jsx  SearchBox.jsx  SearchItemAdditionalDetails.jsx  SearchResultItem.jsx  Suggestions.jsx
src/components/tracklist/: Tracklist.jsx  TracklistItem.jsx
src/hooks/: admin.js  config.js  connection.js  debounce.js  nowPlaying.js  playlists.js  session.js  suggestions.js  tracklist.js
src/js/components/: NowPlaying.jsx  PlaybackControls.jsx  SearchBox.jsx  SearchResultItem.jsx  TracklistItem.jsx
src/js/style/: App.css  Thumbnail.css
src/pages/: DisplayPage.jsx  HomePage.jsx  NewSessionPage.jsx  SearchOverlay.jsx  SessionPage.jsx
src/reducers/: root.js
src/reducers/ducks/: mopidy.js  playback.js  search.js  session.js  tracklist.js
src/services/: fingerprint.js  mopidy.js  pibox.js  toast.js
src/style/: App.css  Home.css  NowPlaying.css  PlaybackControls.css  Search.css  SearchBox.css  SearchOverlay.css  SearchResultItem.css  SessionForm.css  Thumbnail.css  Tracklist.css  index.css
src/style/pages/: SessionPage.css
src/utils/: uris.js
tests/: dummy_audio.py  dummy_backend.py  test_api.py  test_extension.py  test_frontend.py
tests/fixtures/: index.html
