[metadata]
name = Mopidy-Pibox
version = 2.3.0
url = https://github.com/gbannerman/mopidy-pibox
author = Gavin Bannerman
author_email = pibox@gavinb.site
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy extension for jukebox client
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.9
install_requires =
    Mopidy >= 3.0.0
    Pykka >= 2.0.1
    PyGObject == 3.50
    setuptools


[options.extras_require]
lint =
    ruff==0.4.5
    check-manifest
test =
    pytest==8.2.1
    pytest-cov==5.0.0
dev =
    %(lint)s
    %(test)s
    tox


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    pibox = mopidy_pibox:Extension


[check-manifest]
ignore =
    node_modules
    node_modules/*
    src
    src/**
    .github
    .github/*
    .vscode
    .vscode/*
    .coverage
    eslint.config.mjs
    .prettierrc
    vite.config.js
    jsconfig.json
    index.html
    public
    public/*
    docs
    docs/**
    package-lock.json
    package.json
    postcss.config.js
    tailwind.config.js
    __tests__/__pycache__
    __tests__/__pycache__/*